--- a/LoginPortal/MainWindow.xaml
+++ b/LoginPortal/MainWindow.xaml
@@ -5,26 +5,50 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:LoginPortal"
         xmlns:models="clr-namespace:LoginPortal.Models"
+        xmlns:userViewModelNameSpace="clr-namespace:LoginPortal.Views"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
     
     <!--<Window.Resources>
         <models:User x:Key="User"></models:User>
     </Window.Resources>-->
+
+    <Window.Resources>
+        <userViewModelNameSpace:UserViewModel x:Key="DataSource"/>
+    </Window.Resources>
     
     <Grid>
+        
         <Grid.RowDefinitions>
+            <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
             <RowDefinition></RowDefinition>
         </Grid.RowDefinitions>
 
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition></ColumnDefinition>
+            <ColumnDefinition></ColumnDefinition>
+        </Grid.ColumnDefinitions>
 
-        <TextBox Grid.Row="0" Name="FirstNameTextBox" Text="{Binding FirstName, Mode=TwoWay}"></TextBox>
+        <Label Name="FirstNameLabel" Grid.Row="1" Grid.Column="0" Content="FirstName"></Label>
+
+        <Label Name="LastNameLabel" Grid.Row="2" Grid.Column="0" Content="LastName"></Label>
+
+        <Label Name="FullNameLabel" Grid.Row="3" Grid.Column="0" Content="FullName"></Label>
+
+        <ComboBox
+            ItemsSource="{Binding  Source={StaticResource DataSource}, Path=User}"
+            SelectionChanged="SelectUserDropDownList_SelectionChanged"
+            SelectedIndex="0"
+            DisplayMemberPath="FullName"
+            Grid.Row="0" Name="SelectUserDropDownList" ></ComboBox>
+
+        <TextBox Grid.Column="1" Grid.Row="1" Name="FirstNameTextBox" Text="{Binding FirstName, Mode=TwoWay}"></TextBox>
         
-        <TextBox Grid.Row="1" Name="LastNameTextBox" Text="{Binding LastName, Mode=TwoWay}"></TextBox>
+        <TextBox Grid.Column="1" Grid.Row="2" Name="LastNameTextBox" Text="{Binding LastName, Mode=TwoWay}"></TextBox>
 
-        <TextBox Grid.Row="2" Name="FullNameTextBox" Text="{Binding FullName, Mode=OneWay}"></TextBox>
+        <TextBox Grid.Column="1" Grid.Row="3" Name="FullNameTextBox" Text="{Binding FullName, Mode=OneWay}"></TextBox>
         
         <!--<TextBox Grid.Row="0" Name="FirstNameTextBox" Text="{Binding Source={StaticResource User}, Mode=TwoWay, Path=FirstName}"></TextBox>
         
