--- a/LoginPortal/MainWindow.xaml
+++ b/LoginPortal/MainWindow.xaml
@@ -8,10 +8,6 @@
         xmlns:userViewModelNameSpace="clr-namespace:LoginPortal.Views"
         mc:Ignorable="d"
         Title="MainWindow" Height="350" Width="525">
-    
-    <!--<Window.Resources>
-        <models:User x:Key="User"></models:User>
-    </Window.Resources>-->
 
     <Window.Resources>
         <userViewModelNameSpace:UserViewModel x:Key="DataSource"/>
@@ -38,21 +34,20 @@
         <Label Name="FullNameLabel" Grid.Row="3" Grid.Column="0" Content="FullName"></Label>
 
         <ComboBox
-            ItemsSource="{Binding  Source={StaticResource DataSource}, Path=User}"
+            ItemsSource="{Binding  Source={StaticResource DataSource}, Path=Users}"
             SelectionChanged="SelectUserDropDownList_SelectionChanged"
             SelectedIndex="0"
             DisplayMemberPath="FullName"
             Grid.Row="0" Name="SelectUserDropDownList" ></ComboBox>
 
-        <TextBox Grid.Column="1" Grid.Row="1" Name="FirstNameTextBox" Text="{Binding FirstName, Mode=TwoWay}"></TextBox>
-        
-        <TextBox Grid.Column="1" Grid.Row="2" Name="LastNameTextBox" Text="{Binding LastName, Mode=TwoWay}"></TextBox>
+        <TextBox DataContext="{Binding Source={StaticResource DataSource}, Path=Users}" Grid.Column="1" Grid.Row="1" Name="FirstNameTextBox" Text="{Binding FirstName, Mode=TwoWay}"></TextBox>
 
-        <TextBox Grid.Column="1" Grid.Row="3" Name="FullNameTextBox" Text="{Binding FullName, Mode=OneWay}"></TextBox>
-        
-        <!--<TextBox Grid.Row="0" Name="FirstNameTextBox" Text="{Binding Source={StaticResource User}, Mode=TwoWay, Path=FirstName}"></TextBox>
-        
-        <TextBox Grid.Row="1"  Name="LastNameTextBox" Text="{Binding Source={StaticResource User}, Mode=TwoWay, Path=LastName}"></TextBox>-->
+        <TextBox DataContext="{Binding Source={StaticResource DataSource}, Path=Users}" Grid.Column="1" Grid.Row="2" Name="LastNameTextBox" Text="{Binding LastName, Mode=TwoWay}"
+                 >
+            
+        </TextBox>
+
+        <TextBox DataContext="{Binding Source={StaticResource DataSource}, Path=Users}" Grid.Column="1" Grid.Row="3" Name="FullNameTextBox" Text="{Binding FullName, Mode=OneWay}"></TextBox>
         
     </Grid>
 </Window>
